<resources>
    <string name="app_name">Lab4</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_name">Название</string>
    <string name="task_description">Описание</string>
    <string name="create">Создать</string>
    <string name="in_progress">In progress</string>
    <string name="add">Добавить задачу</string>
    <string name="back_to_task">Назад</string>
    <string name="del">Удалить</string>
    <string name="change_status">Изменить статус</string>
    <string name="status">Статус</string>
    <string name="change">Изменить</string>
</resources>