<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:layout_margin="4dp"
    android:background="#E5FFFC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/task_name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task_description" />

        <TextView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/status" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginBottom="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:paddingEnd="6dp"
            android:text="@string/task_name"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="6dp"
            android:text="@string/task_description"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvProgress"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/in_progress" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonChangeStatus"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/black"
            android:text="@string/change_status"
            tools:ignore="ButtonStyle" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/black"
            android:text="@string/del"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
    
</LinearLayout>